[package]
name = "bili-singsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biliup = "0.1"
youtube_dl = { version = "0.8", features = ["tokio"] }
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"]}
rss = "2.0"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
